# baremetal-iac

./: .gitignore  .pre-commit-config.yaml  .tool-versions  README.md  ansible.cfg  pyproject.toml
ansible/inventory/: proxmox  ubuntu
ansible/playbooks/: proxmox.yml  ubuntu.yml
ansible/roles/proxmox/defaults/: main.yml
ansible/roles/proxmox/handlers/: main.yml
ansible/roles/proxmox/tasks/: add-no-subscription-repo.yml  add-svc.yml  main.yml  remove-enterprise-repo.yml  remove-nag.yml
ansible/roles/ssh/defaults/: main.yml
ansible/roles/ssh/tasks/: main.yml
ansible/roles/tailscale/handlers/: main.yml
ansible/roles/tailscale/tasks/: main.yml
ansible/roles/tailscale/vars/: main.yml
packer/: config.pkr.hcl  ubuntu.pkr.hcl  variables.pkr.hcl
packer/playbooks/tasks/: enable_cloud-init.yml
packer/playbooks/templates/: user-data.j2
terraform/: main.tf  vars.tf
terraform/cloudflare/: provider.tf  records.tf  vars.tf  zones.tf
terraform/proxmox/: provider.tf  vars.tf  vms.tf
terraform/tailscale/: devices.tf  output.tf  provider.tf  vars.tf
