[tool.poetry]
name = "baremetal-iac"
version = "0.1.0"
description = "Repeatable provisioning on bare metal."
authors = ["X-McKay <aldmckay@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.6"
ansible = ">=8.1.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
